--- a/index.html
+++ b/index.html
@@ -77,24 +77,32 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-list-item">
-                        <img src="./images/staff1.jpg" alt="Product Designer" width="264">
-                        <h3 class="team-list-title">Mark Guerrero</h3>
-                        <p class="team-list-text">Product Designer</p>
+                        <img src="./images/staff1.jpg" alt="Product Designer" width="264" class="team-list-img">
+                        <div class="team-list-content">
+                            <h3 class="team-list-title">Mark Guerrero</h3>
+                            <p class="team-list-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/staff2.jpg" alt="Frontend Developer" width="264">
-                        <h3 class="team-list-title">Tom Ford</h3>
-                        <p class="team-list-text">Frontend Developer</p>
+                        <img src="./images/staff2.jpg" alt="Frontend Developer" width="264" class="team-list-img">
+                        <div class="team-list-content">
+                            <h3 class="team-list-title">Tom Ford</h3>
+                            <p class="team-list-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/staff3.jpg" alt="Marketing" width="264">
-                        <h3 class="team-list-title">Camila Garcia</h3>
-                        <p class="team-list-text">Marketing</p>
+                        <img src="./images/staff3.jpg" alt="Marketing" width="264" class="team-list-img">
+                        <div class="team-list-content">
+                            <h3 class="team-list-title">Camila Garcia</h3>
+                            <p class="team-list-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/staff4.jpg" alt="UI Designer" width="264">
-                        <h3 class="team-list-title">Daniel Wilson</h3>
-                        <p class="team-list-text">UI Designer</p>
+                        <img src="./images/staff4.jpg" alt="UI Designer" width="264" class="team-list-img">
+                        <div class="team-list-content">
+                            <h3 class="team-list-title">Daniel Wilson</h3>
+                            <p class="team-list-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
