--- a/index.html
+++ b/index.html
@@ -112,42 +112,48 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio1.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio1.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Banking App</h3>
                             <p class="portfolio-list-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio2.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio2.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Cashless Payment</h3>
                             <p class="portfolio-list-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio3.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio3.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Meditation App</h3>
                             <p class="portfolio-list-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio4.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio4.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Taxi Service</h3>
                             <p class="portfolio-list-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio5.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio5.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Screen Illustrations</h3>
                             <p class="portfolio-list-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-list-item">
-                        <img src="./images/portfolio6.jpg" alt="Product Designer" width="360">
+                        <img src="./images/portfolio6.jpg" alt="Product Designer" width="360"
+                            class="portfolio-list-img">
                         <div class="portolio-list-border">
                             <h3 class="portfolio-list-title">Online Courses</h3>
                             <p class="portfolio-list-text">Marketing</p>
